--- a/web-platform/src/Login.css
+++ b/web-platform/src/Login.css
@@ -7,13 +7,13 @@
     width: 90%;
 }
 
-input {
+/* input {
     border-radius: 5px;
     padding-left: 5px;
     border: 1px solid rgba(39, 86, 125, 1);
     width: 95%;
     height: 40px;
-}
+} */
 
 .top {
     margin-top: 5%;
